.provarCaches/00D5f000005vwGkEAI/objects/rstkf__statementrunparms__c.object
<CustomObject>
    <description>statementrunparms__c</description>
    <fields>
        <fullName>rstkf__budrevlevel__c</fullName>
        <label>Budget Rev Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__budrevlevelkey__c</fullName>
        <label>budrevlevelkey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__colno__c</fullName>
        <label>Col #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__columnco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Column Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>ZZ Statement Run Parms</relationshipLabel>
        <relationshipName>ZZ_Statement_Run_Parms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__dimnum__c</fullName>
        <label>Dim Num</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__dimval__c</fullName>
        <label>Dim Val</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>ZZ Statement Run Parms</relationshipLabel>
        <relationshipName>statementrunparms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>ZZ Statement Run Parms</relationshipLabel>
        <relationshipName>statementrunparms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>ZZ Statement Run Parms</relationshipLabel>
        <relationshipName>statementrunparms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__lineno__c</fullName>
        <label>Line #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__overridewithtemplatedimnum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>overridewithtemplatedimnum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__overridewithtemplatedimval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>overridewithtemplatedimval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__overridewithtemplatediv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>overridewithtemplatediv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__overridewithtemplateproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>overridewithtemplateproj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__parmtype__c</fullName>
        <label>Parameter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Column</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rundesc__c</fullName>
        <label>Run Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__specifybudrevlevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifybudrevlevel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifydimnum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifydimnum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifydimval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifydimval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifygldiv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifygldiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyglproj__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyglproj</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyglyear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyglyear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyperiod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyperiod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyvalue1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyvalue1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__specifyvalue2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>specifyvalue2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__statementrun__c</fullName>
        <label>ZZ Statement Run</label>
        <referenceTo>rstkf__statementrun__c</referenceTo>
        <relationshipLabel>ZZ Statement Run Parms</relationshipLabel>
        <relationshipName>statementrunparmss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__value1__c</fullName>
        <label>Value1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__value2__c</fullName>
        <label>Value2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>ZZ Statement Run Parms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ Statement Run Parms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>